/region/temperature/max?xMin=<xMin>&xMax=<xMax>&yMin=<yMin>&yMax=<yMax>&zMin=<zMin>&zMax=<zMax>: current maximum temperature inside the region
